navigation drawer, settings menu,

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,13 @@
     <string name="app_name">BeakProject</string>
     <string name="action_options">Options</string>
     <string name="action_compose_email">Compose Email</string>
+    <string name="drawer_open">OPEN DRAWER HERE</string>
+    <string name="drawer_close">CLOSE DRAWER HERE</string>
+
+    <string-array name="email_client_list">
+        <item>Gmail</item>
+        <item>Yahoo</item>
+        <item>Outlook</item>
+        <item>Hotmail</item>
+    </string-array>
 </resources>
