--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,8 @@
         <item>Outlook</item>
         <item>Hotmail</item>
     </string-array>
+
+    <string name="button_enter">Enter</string>
+    <string name="forgot_password">Forgot Password?</string>
+
 </resources>
