--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,9 +13,6 @@
     </string-array>
 
     <string name="button_enter">Enter</string>
-    <string name="forgot_password">Forgot Password?</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="forgot_password_link">Forgot Password?<a href="http://beakit.com/forgotpassword.php">Click Here.</a></string>
 
 </resources>
