--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,9 @@
     </string-array>
 
     <string name="button_enter">Enter</string>
+    <!--
     <string name="forgot_password_link">Forgot Password?<a href="http://beakit.com/forgotpassword.php">Click Here.</a></string>
+    -->
+    <string name="forgot_password_link"> Click Here <a href="http://beakit.com"></a></string>
 
 </resources>
